# reloc

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  _CoqProject  coq-reloc.opam  guix.scm  opam
docs/: guide.md
theories/: proofmode.v  reloc.v
theories/examples/: Y.v  bit.v  cell.v  coinflip.v  counter.v  generative.v  lateearlychoice.v  lock.v  namegen.v  or.v  par.v  red_blue_flag.v  rwcas.v  symbol.v  ticket_lock.v  various.v
theories/examples/folly_queue/: CG_queue.v  README.md  mpmcqueue.v  refinement.v  set.v  singleElementQueue.v  ticketLock.v  turnSequencer.v
theories/examples/stack/: CG_stack.v  FG_stack.v  refinement.v
theories/examples/stack_helping/: helping_wrapper.v  offers.v  stack.v
theories/experimental/: cka.v
theories/experimental/helping/: helping_stack.v  helping_wrapper.v  mailbox.v  offers.v
theories/experimental/hocap/: counter.v  ticket_lock.v
theories/lib/: Y.v  assert.v  counter.v  list.v  lock.v  polyeq.v
theories/logic/: adequacy.v  compatibility.v  derived.v  model.v  rules.v  spec_ra.v  spec_rules.v
theories/logic/proofmode/: spec_tactics.v  tactics.v
theories/prelude/: arith.v  asubst.v  bijections.v  ctx_subst.v  lang_facts.v  properness.v  pureclosed.v  tactics.v
theories/tests/: proofmode_tests.v  tp_tests.v
theories/typing/: contextual_refinement.v  contextual_refinement_alt.v  fundamental.v  interp.v  soundness.v  tactics.v  types.v
