opam-version: "2.0"
maintainer: "Ralf Jung <jung@mpi-sws.org>"
authors: "Dan Frumin, Robbert Krebbers"
homepage: "http://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/dfrumin/reloc/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/dfrumin/reloc.git"

depends: [
  "coq-iris-heap-lang" { (= "dev.2024-02-02.1.b30c53e2") | (= "dev") }
  "coq-autosubst" { = "dev" }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
